--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "async": "^0.6.2",
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
     "chai": "*",
@@ -31,7 +31,9 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "mysql": "^2.15.0",
+    "node-pre-gyp": "^0.10.3",
     "nodemailer": "^2.5.0",
+    "nodemon": "^1.18.2",
     "passport": "0.3.x",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "1.x",
@@ -39,6 +41,7 @@
     "sequelize": "^4.38.0",
     "serve-favicon": "^2.5.0",
     "should": "*",
+    "sqlite3": "^4.0.2",
     "tesseract.js": "^1.0.10",
     "underscore": "1.*",
     "when": "^3.7.8"
